...
/// use a service chosen by the user in Apple's interface.
enum ImagePlaygroundStyle {
  /// Animated illustration style.
  animation,

  /// Illustration style.
  illustration,

  /// Sketch style.
  sketch,

  /// Adaptive-image-glyph creation.
  emoji,
...
